udpated various and got API working for gmail

--- a/task.html
+++ b/task.html
@@ -18,15 +18,16 @@
 </head>
 <body>
 <header>
-  <h2>Brendans Tasks</h2>
+  <h2>Brendans Super Tasks</h2>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Create Update</a></li>
-      <li><a href="#">More</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="task.html">Open Tasks</a></li>
+        <li><a href="gmailapi.html">Tasks Email API</a></li>
+        <li><a href="#">Project overview</a></li>
     </ul>
   </nav>
   
@@ -69,7 +70,8 @@
         </table>
     </div>
     <div id="display">
-        <h2>My Tasks</h2>
+        <h2>My Open Tasks</h2>
+        <p>These are all my open tasks extracted from the MySql database - you can add edit or delete!</p>
         <button onClick="showCreate()">Create</button>
         <table id="taskTable" class="table">
             <tr>
