--- a/gmailapi.html
+++ b/gmailapi.html
@@ -30,7 +30,8 @@
           <li><a href="/">Home</a></li>
           <li><a href="task.html">Open Tasks</a></li>
           <li><a href="gmailapi.html">Tasks Email API</a></li>
-          <li><a href="#">Project overview</a></li>
+          <li><a href="project_overview.html">Project overview</a></li>
+          <li><a href="/logout">Logout</a></li>
         </ul>
       </nav>
 
