--- a/project.html
+++ b/project.html
@@ -34,11 +34,12 @@
   
   <tasks>
     
-<p>This is index.html</p>
+<p>This is Project overview </p>
 
 <p>Welcome to Brendans Super tasks - im a busy man !!!</p>
 <p>Select an option from the menu on the left</p>
 
+<p>Project overview to go here </p>
 
   </tasks>
 </section>
