--- a/task.html
+++ b/task.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Brendans Super Tasks</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="task.html">Open Tasks</a></li>
         <li><a href="gmailapi.html">Tasks Email API</a></li>
-        <li><a href="#">Project overview</a></li>
+        <li><a href="project.html">Project overview</a></li>
         <li><a href="/logout">Logout</a></li>
 
     </ul>
