python anywhere working yaaa

--- a/project.html
+++ b/project.html
@@ -36,15 +36,14 @@
   
   <tasks>
     
-<p>This is Project overview </p>
+<h3>This is Project overview </h3>
 
 <p>Welcome to Brendans Super tasks - im a busy man !!!</p>
 <p>Select an option from the menu on the left</p>
-
-<p>Project overview to go here</p>
-
+<hr>
+<p>Project overview </p>
+<hr>
 I decided to create a tasks web application which:
-
 <ol>
 <li>- Allows me to add/create tasks</li>
 <li>- Update and edit these tasks</li>
@@ -61,14 +60,20 @@ The user also has the ability to extract the emails using the google Gmail API a
 <br>
 The user needs to login to view and edit create tasks etc - this is performed via the use of cookies sessions.
 <br>
+<hr>
+<br>
+<p>- Hosted on to pythonanywhere: - </li><a href="http://brenbiz.eu.pythonanywhere.com/">Link to my Python Anywhere</a></p>
+<p> Python anywhere hosting - Gmail API extract hit and miss - need to manually run messages.py for API extract to update csv - looking into</p>
+<p>Need to look at connection pooling when i have the time</p>
+<hr>
 <br>
 Future improvements - probably wont get this done before project deadline but is for my own interest and training)
 <br>
 <ol>
 <br>
-<li>- Validation on form to allow only certain selections and perform form Validation (ie no empty values allowed)</li>
-<li>- login validation via my mySql users table</li>
-<li>- Upload and host on to pythonanywhere</li> <p><a href="http://brenbiz.eu.pythonanywhere.com/">Link to my Python Anywhere</a></p>
+<li>- Validation on my input form to allow only certain selections and perform form Validation (ie no empty values allowed)</li>
+<li>- Login validation via my mySql users table</li>
+
 </ol>
 
 </tasks>
