--- a/task.html
+++ b/task.html
@@ -29,6 +29,7 @@
         <li><a href="gmailapi.html">Tasks Email API</a></li>
         <li><a href="project.html">Project overview</a></li>
         <li><a href="/logout">Logout</a></li>
+        <li><a href="http://brenbiz.eu.pythonanywhere.com/">Python Anywhere</a></li>
 
     </ul>
   </nav>
